# java-language-server

bazel/: .bazelproject  .bazelrc  BUILD  MODULE.bazel  README  WORKSPACE  configure.bzl  extensions.bzl  overlay.bzl  overlay_tree.py
bazel/overlay/src/main/java/org/javacs/: BUILD
bazel/overlay/src/main/protobuf/: BUILD
bazel/overlay/src/test/examples/bazel-project/: BUILD
bazel/overlay/src/test/examples/debug/: BUILD
bazel/overlay/src/test/examples/home-dir/: BUILD
bazel/overlay/src/test/examples/incremental-compile/: BUILD
bazel/overlay/src/test/examples/maven-project/: BUILD
bazel/overlay/src/test/examples/missing-type-identifier/: BUILD
bazel/overlay/src/test/examples/simple-project/: BUILD
bazel/overlay/src/test/java/org/javacs/: BUILD
scripts/: gen_proto.sh  link_linux.sh
src/main/java/org/javacs/: FileStore.java  Parser.java
src/main/java/org/javacs/markup/: ErrorProvider.java
src/test/java/org/javacs/: CodeActionTest.java  FileStoreTest.java  FindResource.java  GotoTest.java  IncrementalCompileTest.java  InferBazelConfigTest.java  InferConfigTest.java  JavaCompilerServiceTest.java  JavaDebugServerTest.java  JavaLanguageServerTest.java  LanguageServerFixture.java  SemanticColorsTest.java  SourceFileManagerTest.java  StringSearchTest.java
