# Create a Bazel external repository called "jls" containing the
# java-language-server source code overlayed with the contents of the
# bazel/overlay directory tree.  This allows us to locate the Bazel BUILD files
# needed to compile java-language-server in the bazel subdirectory tree,
# instead of adding them to java-language-server's src tree.

overlay = use_extension("//:extensions.bzl", "overlay")
use_repo(overlay, "jls")

# Rule dependencies

bazel_dep(name = "protobuf", version = "32.0")
bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_jvm_external", version = "6.8")

# Maven artifacts

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.code.gson:gson:2.8.9",
        "junit:junit:4.13.1",
        "org.hamcrest:hamcrest-all:1.3",
        "org.openjdk.jmh:jmh-core:1.21",
        "org.openjdk.jmh:jmh-generator-annprocess:1.21",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    # lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")
